// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeepSeek test DeepSeek reasoning (deepseek-r1) 1`] = `
{
  "generations": [
    {
      "info": {
        "finishReason": "stop",
      },
      "message": {
        "_grp": 1,
        "_id": [
          "events",
          "input",
          "load",
          "msgs",
          "assistant",
          "BotMessage",
        ],
        "_kwargs": {
          "additional_kwargs": {},
          "content": "Hi! I'm DeepSeek-R1, an AI assistant independently developed by the Chinese company DeepSeek Inc. I'm excited to chat with you and help out!",
        },
        "_type": "constructor",
      },
      "output": "Hi! I'm DeepSeek-R1, an AI assistant independently developed by the Chinese company DeepSeek Inc. I'm excited to chat with you and help out!",
    },
  ],
  "llmOutput": {
    "tokenUsage": {
      "completionTokens": 72,
      "promptTokens": 11,
      "totalTokens": 83,
    },
  },
}
`;

exports[`DeepSeek test DeepSeek reasoning (deepseek-r1) 2`] = `
{
  "completionTokens": 35,
  "promptTokens": 12,
  "totalTokens": 47,
}
`;

exports[`DeepSeek test DeepSeek text (deepseek-v3) 1`] = `
{
  "generations": [
    {
      "info": {
        "finishReason": "stop",
      },
      "message": {
        "_grp": 1,
        "_id": [
          "events",
          "input",
          "load",
          "msgs",
          "assistant",
          "BotMessage",
        ],
        "_kwargs": {
          "additional_kwargs": {},
          "content": "Hello! I'm DeepSeek-V3, an artificial intelligence assistant created by DeepSeek. I'm at your service and would be delighted to assist you with any inquiries or tasks you may have.",
        },
        "_type": "constructor",
      },
      "output": "Hello! I'm DeepSeek-V3, an artificial intelligence assistant created by DeepSeek. I'm at your service and would be delighted to assist you with any inquiries or tasks you may have.",
    },
  ],
  "llmOutput": {
    "tokenUsage": {
      "completionTokens": 41,
      "promptTokens": 9,
      "totalTokens": 50,
    },
  },
}
`;

exports[`DeepSeek test DeepSeek text (deepseek-v3) 2`] = `
{
  "completionTokens": 45,
  "promptTokens": 12,
  "totalTokens": 57,
}
`;
